Trying nougat and donut for parsing

--- a/exp1.ipynb
+++ b/exp1.ipynb
@@ -210,11 +210,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ASCE STANDARD\n",
+      "ASCE/SEI\n",
+      "7-16\n",
+      "Minimum Design Loads and \n",
+      "Associated Criteria for \n",
+      "Buildings and Other Structures\n",
+      "Downloaded from ascelibrary.org by University of Illinois At Urbana on 10/07/19. Copyright ASCE. For personal use only; all rights reserved.\n",
+      "ASCE STANDARD ASCE/SEI\n",
+      "7-16\n",
+      "Minimum Design Loads and\n",
+      "Associated Criteria for Buildingsand Other Structures\n",
+      "PUBLISHED BY THE AMERICAN SOCIETY OF CIVIL ENGINEERS\n",
+      "Downloaded from ascelibrary.org by University of Illinois At Urbana on 10/07/19. Copyright ASCE. For personal use only; all rights reserved.\n",
+      "Library of Congress Cataloging-in-Publication Data\n",
+      "Names: American Society of Civil Engineers.\n",
+      "Title: Minimum design loads and associated criteria for buildings and other structures.\n",
+      "Other titles: Minimum design loads for buildings and other structures. | ASCE standard, ASCE/\n",
+      "SEI 7-16, minimum design loads and associated criteria for buildings and other structures\n",
+      "Description: Reston, Virginia : American Society of Civil Engineers, [2017] | Ear\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(text[:1000])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "downloading nougat checkpoint version 0.1.0-small to path /Users/jeetdas/.cache/torch/hub/nougat-0.1.0-small\n",
+      "config.json: 100%|██████████████████████████████| 557/557 [00:00<00:00, 922kb/s]\n",
+      "pytorch_model.bin: 100%|█████████████████████| 956M/956M [01:01<00:00, 16.3Mb/s]\n",
+      "special_tokens_map.json: 100%|████████████████| 96.0/96.0 [00:00<00:00, 348kb/s]\n",
+      "tokenizer.json: 100%|██████████████████████| 2.04M/2.04M [00:00<00:00, 16.5Mb/s]\n",
+      "tokenizer_config.json: 100%|████████████████████| 106/106 [00:00<00:00, 241kb/s]\n",
+      "/Users/jeetdas/miniconda3/envs/cv_hw5_1/lib/python3.8/site-packages/torch/functional.py:504: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at /Users/runner/work/pytorch/pytorch/pytorch/aten/src/ATen/native/TensorShape.cpp:3527.)\n",
+      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n",
+      "  0%|                                                   | 0/223 [00:00<?, ?it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "!nougat 'ASCE_7-16_1.pdf' --out ."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(text[:1000])"
+    "mmd_filename = \"ASCE_7-16_56-60.mmd\"\n",
+    "mmd_file = open(mmd_filename, \"r\")\n",
+    "mmd_text = mmd_file.read()\n",
+    "print(mmd_text[:1000])"
    ]
   }
  ],
