Question and answering - Not working yet

--- a/exp2.ipynb
+++ b/exp2.ipynb
@@ -143,8 +143,8 @@
     "import os\n",
     "import openai\n",
     "\n",
-    "openai.api_key = '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'\n",
-    "os.environ['OPENAI_API_KEY'] = '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'"
+    "openai.api_key = ''\n",
+    "os.environ['OPENAI_API_KEY'] = ''"
    ]
   },
   {
