--- a/exp1.ipynb
+++ b/exp1.ipynb
@@ -379,6 +379,135 @@
     "res = askQuestion(\"What is the amount of uniform live load I should apply to handrail and guardrail systems?\", False)\n",
     "print(res)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The formula to calculate flat roof snow load is:\n",
+      "\n",
+      "pf = 0.7CeCtIspg\n",
+      "\n",
+      "Where:\n",
+      "pf = flat roof snow load in lb/ft2 (kN/m2)\n",
+      "Ce = exposure factor (determined from Table 7.3-1)\n",
+      "Ct = thermal factor (determined from Table 7.3-2)\n",
+      "Is = importance factor (determined from Table 1.5-2)\n",
+      "pg = ground snow load in lb/ft2 (kN/m2)\n",
+      "-\n",
+      " Pf = 0.7CeCtIsPg\n"
+     ]
+    }
+   ],
+   "source": [
+    "res1 = askQuestion(\"What is the formula to calculate flat roof snow load?\", True)\n",
+    "print('-\\n', res1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The conditions for a flexible diaphragm are as follows:\n",
+      "\n",
+      "1. The calculated diaphragm deflection (typically at midspan) between supports (lines of vertical elements) is greater than two times the average story drift of the vertical lateral force-resisting elements located at the supports of the diaphragm span.\n",
+      "\n",
+      "2. The diaphragm must satisfy the loading conditions prescribed in Section 12.8.\n",
+      "\n",
+      "3. The diaphragm must have sufficient degrees of freedom to account for its participation in the structure's dynamic response. When modal response spectrum or response-history analysis is performed, a minimum of three dynamic degrees of freedom consisting of translation in two orthogonal plan directions and torsional rotation about the vertical axis at each level of the structure shall be used.\n",
+      "\n",
+      "It is important to note that analysis using a 3D representation is not required for structures with flexible diaphragms that have Type 4 horizontal structural irregularities.\n",
+      "-\n",
+      " Diaphragm flexibility conditions.\n"
+     ]
+    }
+   ],
+   "source": [
+    "res3 = askQuestion(\"What are the flexible diaphragm conditions? \", True)\n",
+    "print('-\\n', res3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The minimum design tensile force between the pile cap and steel pipe for a structure in seismic design category D is not less than 10% of the pile compression capacity.\n",
+      "-\n",
+      " Seismic Design Category D requires a minimum design tensile force between the pile cap and steel pipe. The exact value depends on various factors including the type of soil, the size and type of the pile, the depth of the pile, the weight of the structure, and the expected level of seismic activity. It's best to consult a structural engineer or the relevant building codes for the specific requirements.\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"What is the minimum design tensile force between the pile cap and steel pipe for a structure in seismic design category d?\"\n",
+    "question1 = \"What is the minimum design tensile force between the pile cap and steel pile for a structure in seismic design category d?\"\n",
+    "res = askQuestion(question, True)\n",
+    "print(\"-\\n\", res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The equation used to calculate the design story drift at level x is:\n",
+      "\n",
+      "δx = Cd * δxe * Ie\n",
+      "\n",
+      "Where:\n",
+      "- δx is the design story drift at level x (in. or mm)\n",
+      "- Cd is the deflection amplification factor\n",
+      "- δxe is the deflection at the location required by the code, determined by an elastic analysis\n",
+      "- Ie is the Importance Factor determined in accordance with the code requirements.\n",
+      "-\n",
+      " Equation\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"What is the equation to compute the design story drift at level x?\"\n",
+    "res = askQuestion(question, True)\n",
+    "print(\"-\\n\", res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The minimum dead load for wood shingles is not provided in the given context.\n",
+      "-\n",
+      " Answer: 1/4 inch.\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"What is the minimum dead lead for wood shingles?\"\n",
+    "res = askQuestion(question, True)\n",
+    "print(\"-\\n\", res)"
+   ]
   }
  ],
  "metadata": {
