--- a/exp1.ipynb
+++ b/exp1.ipynb
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,14 +259,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Retrying langchain.embeddings.openai.embed_with_retry.<locals>._embed_with_retry in 4.0 seconds as it raised RateLimitError: Rate limit reached for text-embedding-ada-002 in organization org-lDtgh4Rd6ovov1G7yFXjXH7P on tokens per min (TPM): Limit 1000000, Used 808994, Requested 262322. Please try again in 4.278s. Visit https://platform.openai.com/account/rate-limits to learn more..\n"
+      "Retrying langchain.embeddings.openai.embed_with_retry.<locals>._embed_with_retry in 4.0 seconds as it raised RateLimitError: Rate limit reached for text-embedding-ada-002 in organization org-lDtgh4Rd6ovov1G7yFXjXH7P on tokens per min (TPM): Limit 1000000, Used 764346, Requested 262322. Please try again in 1.6s. Visit https://platform.openai.com/account/rate-limits to learn more..\n"
      ]
     }
    ],
@@ -277,16 +277,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "OpenAIEmbeddings(client=<class 'openai.api_resources.embedding.Embedding'>, async_client=None, model='text-embedding-ada-002', deployment='text-embedding-ada-002', openai_api_version='', openai_api_base=None, openai_api_type='', openai_proxy='', embedding_ctx_length=8191, openai_api_key='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', openai_organization=None, allowed_special=set(), disallowed_special='all', chunk_size=1000, max_retries=2, request_timeout=None, headers=None, tiktoken_model_name=None, show_progress_bar=False, model_kwargs={}, skip_empty=False, default_headers=None, default_query=None, http_client=None)"
+       "OpenAIEmbeddings(client=<class 'openai.api_resources.embedding.Embedding'>, async_client=None, model='text-embedding-ada-002', deployment='text-embedding-ada-002', openai_api_version='', openai_api_base=None, openai_api_type='', openai_proxy='', embedding_ctx_length=8191, openai_api_key='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', openai_organization=None, allowed_special=set(), disallowed_special='all', chunk_size=1000, max_retries=2, request_timeout=None, headers=None, tiktoken_model_name=None, show_progress_bar=False, model_kwargs={}, skip_empty=False, default_headers=None, default_query=None, http_client=None)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,17 +313,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'question': 'What is this book about?', 'chat_history': [HumanMessage(content='What is this book about?'), AIMessage(content=\"I'm sorry, but I don't have enough information to determine what specific book you are referring to. Could you provide more context or a specific title?\")], 'answer': \"I'm sorry, but I don't have enough information to determine what specific book you are referring to. Could you provide more context or a specific title?\"}\n",
+      "{'question': 'What is this book about?', 'chat_history': [HumanMessage(content='What is this book about?'), AIMessage(content=\"I don't have enough information to answer that question.\")], 'answer': \"I don't have enough information to answer that question.\"}\n",
       "\n",
       "--------------------------------------------------\n",
-      " I'm sorry, but I don't have enough information to determine what specific book you are referring to. Could you provide more context or a specific title?\n"
+      " I don't have enough information to answer that question.\n"
      ]
     }
    ],
@@ -505,6 +505,249 @@
    ],
    "source": [
     "question = \"What is the minimum dead lead for wood shingles?\"\n",
+    "res = askQuestion(question, True)\n",
+    "print(\"-\\n\", res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The formula to calculate the ice dam load on a roof eave is not provided in the given context.\n",
+      "-\n",
+      " Weight\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"What is the ice dam load on a roof eave?\"\n",
+    "res = askQuestion(question, True)\n",
+    "print(\"-\\n\", res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The loads that must be taken into account when determining seismic mass are:\n",
+      "\n",
+      "1. All permanent equipment (e.g., air conditioners, elevator equipment, and mechanical systems)\n",
+      "2. Partitions to be erected or rearranged as specified in Section 4.3.2 (greater of actual partition weight and 10 lb/ft2 (0.5 kN/m2) of floor area)\n",
+      "3. 20% of significant snow load, pf > 30 lb/ft2 (pf > 1.4 kN/m2)\n",
+      "4. The weight of landscaping and similar materials\n",
+      "-\n",
+      " Dead and live loads.\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"What loads must be considered in determining seismic mass?\"\n",
+    "res = askQuestion(question, True)\n",
+    "print(\"-\\n\", res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ice dams must be considered in situations where there is a possibility of icicles and ice dams forming on the cold eaves of sloped roofs. This can occur due to heat losses from within buildings or solar melting of snow during the day and refreezing along eaves at night. It is important to investigate the possibility of similar occurrences for any intermittently heated structure. Additionally, icings may also build up on cold roofs subjected to meltwater from warmer roofs above or from exhaust fans and other mechanical equipment on roofs.\n",
+      "-\n",
+      " Cold climates.\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"Under what conditions must ice dams be considered?\"\n",
+    "res = askQuestion(question, True)\n",
+    "print(\"-\\n\", res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The density of Aluminum is 170 lb/ft3 or 27 kN/m3.\n",
+      "-\n",
+      " 2.7g/cm³\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"What is the density of Aluminum?\"\n",
+    "res = askQuestion(question, True)\n",
+    "print(\"-\\n\", res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The wind pressure on a parapet can be determined by following these steps:\n",
+      "\n",
+      "1. Determine the risk category of the building using Table 1.5-1.\n",
+      "2. Determine the basic wind speed (V) for the applicable risk category using Figs. 26.5-1 and 26.5-2.\n",
+      "3. Determine wind load parameters such as the wind directionality factor (Kd), exposure category (B, C, or D), topographic factor (Kzt), ground elevation factor (Ke), enclosure classification, and internal pressure coefficient (GC pi).\n",
+      "4. Determine the velocity pressure exposure coefficient (Kh) at the top of the parapet using Table 26.10-1.\n",
+      "5. Determine the velocity pressure (qp) at the top of the parapet using Eq. (26.10-1).\n",
+      "6. Determine the external pressure coefficient (GC p) for the wall and roof surfaces adjacent to the parapet based on the specific roof type and height.\n",
+      "7. Calculate the wind pressure (p) using Eq. (30.8-1) for both the windward and leeward face of the parapet, considering two load cases (Case A and Case B) as shown in Fig. 30.8-1.\n",
+      "\n",
+      "It is important to consult the relevant tables and figures mentioned in the given context for accurate calculations.\n",
+      "-\n",
+      " Calculation\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"How do I determine the wind pressure on a parapet?\"\n",
+    "res = askQuestion(question, True)\n",
+    "print(\"-\\n\", res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The steps to determine the wind pressure on a parapet are as follows:\n",
+      "\n",
+      "1. Determine the risk category of the building.\n",
+      "2. Determine the basic wind speed for the applicable risk category.\n",
+      "3. Determine wind load parameters such as wind directionality factor, exposure category, topographic factor, ground elevation factor, enclosure classification, and internal pressure coefficient.\n",
+      "4. Determine the velocity pressure exposure coefficient at the top of the parapet.\n",
+      "5. Determine the velocity pressure at the top of the parapet using a specific equation.\n",
+      "6. Determine the external pressure coefficient for the walls and roof surfaces adjacent to the parapet.\n",
+      "7. Calculate the wind pressure on the parapet using a specific equation.\n",
+      "\n",
+      "Please refer to the provided context for detailed information on each step and the corresponding references.\n",
+      "-\n",
+      " Calculate\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"How do I determine the wind pressure on a parapet? Please give me the steps to calculate the value accordingly. Please answer in English\"\n",
+    "res = askQuestion(question, True)\n",
+    "print(\"-\\n\", res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The enclosure classifications for wind loading include \"enclosed,\" \"partially enclosed,\" and \"open.\" These classifications depend on the amount and location of openings in the building envelope that allow air to flow through.\n",
+      "-\n",
+      " Wind Exposure Categories\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"What are the enclosure classifications for wind loading?\"\n",
+    "res = askQuestion(question, True)\n",
+    "print(\"-\\n\", res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The enclosure classifications for wind loading are \"enclosed,\" \"partially enclosed,\" and \"open.\" The corresponding internal pressure coefficients can be found in Table 26.13-1 in the ASCE 7-16 standard.\n",
+      "-\n",
+      " Enclosure classifications: open, partially enclosed, enclosed. Internal pressure coefficients: 0.18, ±0.55, ±0.30 respectively.\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"What are the enclosure classifications for wind loading? Can you provide the corresponding internal pressure coefficients?\"\n",
+    "res = askQuestion(question, True)\n",
+    "print(\"-\\n\", res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Based on the information provided, the enclosure classification for a rectangular structure with a single solid wall at the perimeter would be \"partially enclosed.\"\n",
+      "-\n",
+      " Perimeter Enclosure\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"What is the enclosure classification for a rectangular structure with a single solid wall at the perimeter?\"\n",
+    "res = askQuestion(question, True)\n",
+    "print(\"-\\n\", res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The steps to design a wall for out-of-plane forces are not explicitly mentioned in the given context. However, some relevant information can be inferred:\n",
+      "\n",
+      "1. Consider local deformations: Walls must be designed to accommodate slight movements caused by material shrinkage, temperature changes, and foundation movements.\n",
+      "\n",
+      "2. Ensure ductility: Wall connections should have some degree of ductility to accommodate these slight movements while providing the required strength.\n",
+      "\n",
+      "3. Design in accordance with Chapter 13: Nonstructural walls, although not subject to the same requirements, must still be designed according to the guidelines provided in Chapter 13.\n",
+      "\n",
+      "It is important to note that the given context does not provide a comprehensive step-by-step guide for designing walls for out-of-plane forces. For detailed and specific design requirements, it is recommended to refer to the relevant building codes and standards.\n",
+      "-\n",
+      " Designing wall for out-of-plane forces.\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"What are the steps to design a wall for out-of-plane forces?\"\n",
     "res = askQuestion(question, True)\n",
     "print(\"-\\n\", res)"
    ]
