--- a/exp1.ipynb
+++ b/exp1.ipynb
@@ -253,8 +253,8 @@
     "import os\n",
     "import openai\n",
     "\n",
-    "openai.api_key = ''\n",
-    "os.environ['OPENAI_API_KEY'] = ''"
+    "openai.api_key = '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'\n",
+    "os.environ['OPENAI_API_KEY'] = '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'"
    ]
   },
   {
